--- a/index.html
+++ b/index.html
@@ -210,6 +210,7 @@
             <tr data-step="15"><td></td><td>Gemini-2.5-Pro</td><td>15</td><td>23.8</td><td>19.4</td><td>11.8</td></tr>
             <tr data-step="15"><td></td><td>OpenAI o3</td><td>15</td><td>22.1</td><td>17.4</td><td>12.1</td></tr>
             <tr data-step="15"><td></td><td>Qwen2.5-VL</td><td>15</td><td>13.7</td><td>13.3</td><td>13.7</td></tr>
+            <tr data-step="15"><td></td><td>Qwen3-VL</td><td>15</td><td>29.0</td><td>22.5</td><td>10.1</td></tr>
             <!-- 50 steps -->
             <tr data-step="50"><td></td><td>Agent-S2.5</td><td>50</td><td>51.4</td><td>35.1</td><td>20.2</td></tr>
             <tr data-step="50"><td></td><td>Claude-4-Sonnet</td><td>50</td><td>43.8</td><td>37.4</td><td>20.2</td></tr>
@@ -217,6 +218,7 @@
             <tr data-step="50"><td></td><td>Gemini-2.5-Pro</td><td>50</td><td>26.9</td><td>29.9</td><td>12.3</td></tr>
             <tr data-step="50"><td></td><td>OpenAI o3</td><td>50</td><td>23.8</td><td>32.3</td><td>12.0</td></tr>
             <tr data-step="50"><td></td><td>Qwen2.5-VL</td><td>50</td><td>13.6</td><td>38.4</td><td>7.8</td></tr>
+            <tr data-step="50"><td></td><td>Qwen3-VL</td><td>50</td><td>33.7</td><td>25.1</td><td>21.1</td></tr>
         </tbody>
     </table>
     <p class="note">Click headers to sort, use buttons to filter results.</p>
