--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>OSWorld-MCP Leaderboard</title>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 <style>
     body {
         font-family: 'Segoe UI', Tahoma, sans-serif;
@@ -12,7 +13,6 @@
         line-height: 1.6;
         color: #333;
     }
-
     /* ===== Header ===== */
     header {
         background: linear-gradient(90deg, #0069d9, #004085);
@@ -29,7 +29,6 @@
         margin: 5px 0;
         font-size: 15px;
     }
-
     /* ===== Section ===== */
     section {
         padding: 20px 40px;
@@ -48,7 +47,6 @@
     p {
         margin: 10px 0;
     }
-
     /* ===== Image Card ===== */
     .img-card {
         background: white;
@@ -76,7 +74,6 @@
         font-size: 14px;
         color: #555;
     }
-
     /* ===== List Card ===== */
     ul {
         background: white;
@@ -138,25 +135,46 @@
     .fade-out {opacity: 0; transition: opacity 0.3s;}
     .fade-in {opacity: 1; transition: opacity 0.3s;}
     .note {text-align: center; color: gray; font-size: 14px;}
+    /* Button */
+    .icon-links {
+        margin-top: 10px;
+    }
+    .icon-links a {
+        color: white;
+        font-size: 22px;
+        margin: 0 10px;
+        text-decoration: none;
+        transition: color 0.3s;
+    }
+    .icon-links a:hover {
+        color: #17a2b8; /* 鼠标悬停颜色 */
+    }
 </style>
 </head>
 <body>
-
 <header>
     <h1>OSWorld-MCP Benchmark Leaderboard</h1>
     <p><strong>Paper:</strong> OSWorld-MCP: Benchmarking MCP Tool Invocation in Computer-Use Agents</p>
     <p><strong>Authors:</strong> Hongrui Jia, Jitong Liao, Xi Zhang, Haiyang Xu*, Tianbao Xie, Chaoya Jiang, Ming Yan, Si Liu, Wei Ye, Fei Huang</p>
+    <div class="icon-links">
+        <!-- 论文链接 -->
+        <a href="https://arxiv.org/abs/2501.12345" target="_blank" title="Read the Paper">
+            <i class="fas fa-file-alt"></i>
+        </a>
+        <!-- GitHub 链接 -->
+        <a href="https://github.com/yourusername/osworld-mcp" target="_blank" title="View on GitHub">
+            <i class="fab fa-github"></i>
+        </a>
+    </div>
 </header>
-
 <section>
     <h2>Abstract</h2>
     <p>
-        With advances in decision-making and reasoning capabilities, multimodal agents have shown strong potential in computer application scenarios. 
-        Past evaluations mainly assessed GUI interaction skills, while tool invocation abilities enabled by the Model Context Protocol (MCP) have been largely overlooked. 
+        With advances in decision-making and reasoning capabilities, multimodal agents have shown strong potential in computer application scenarios.
+        Past evaluations mainly assessed GUI interaction skills, while tool invocation abilities enabled by the Model Context Protocol (MCP) have been largely overlooked.
         We present <strong>OSWorld-MCP</strong>, the first comprehensive and fair benchmark for assessing computer-use agents’ tool invocation, GUI operation, and decision-making abilities in a real-world environment.
     </p>
 </section>
-
 <!-- Example image card from paper -->
 <section>
     <div class="img-card">
@@ -164,7 +182,6 @@
         <div class="img-caption">Figure 1: Task execution via GUI vs MCP Tool</div>
     </div>
 </section>
-
 <section>
     <h2>Highlights</h2>
     <ul>
@@ -175,14 +192,12 @@
         <li>Positive relationship between TIR and accuracy validates benchmark challenge.</li>
     </ul>
 </section>
-
 <section>
     <div class="img-card">
         <img src="Fig6.png" alt="Tool Distribution">
         <div class="img-caption">Figure 4: Tool distribution across software ecosystems</div>
     </div>
 </section>
-
 <section>
     <h2>Leaderboard (GUI + MCP)</h2>
     <div class="filter-buttons">
@@ -190,7 +205,6 @@
         <button data-filter="15">15 Steps</button>
         <button data-filter="50">50 Steps</button>
     </div>
-
     <table id="leaderboard">
         <thead>
             <tr>
@@ -209,21 +223,20 @@
             <tr data-step="15"><td></td><td>Seed1.5-VL</td><td>15</td><td>34.8</td><td>24.4</td><td>10.2</td></tr>
             <tr data-step="15"><td></td><td>Gemini-2.5-Pro</td><td>15</td><td>23.8</td><td>19.4</td><td>11.8</td></tr>
             <tr data-step="15"><td></td><td>OpenAI o3</td><td>15</td><td>22.1</td><td>17.4</td><td>12.1</td></tr>
+            <tr data-step="15"><td></td><td>Qwen3-VL</td><td>15</td><td>31.3</td><td>24.5</td><td>10.5</td></tr>
             <tr data-step="15"><td></td><td>Qwen2.5-VL</td><td>15</td><td>13.7</td><td>13.3</td><td>13.7</td></tr>
-            <tr data-step="15"><td></td><td>Qwen3-VL</td><td>15</td><td>29.0</td><td>22.5</td><td>10.1</td></tr>
             <!-- 50 steps -->
             <tr data-step="50"><td></td><td>Agent-S2.5</td><td>50</td><td>51.4</td><td>35.1</td><td>20.2</td></tr>
             <tr data-step="50"><td></td><td>Claude-4-Sonnet</td><td>50</td><td>43.8</td><td>37.4</td><td>20.2</td></tr>
             <tr data-step="50"><td></td><td>Seed1.5-VL</td><td>50</td><td>39.5</td><td>29.6</td><td>23.0</td></tr>
             <tr data-step="50"><td></td><td>Gemini-2.5-Pro</td><td>50</td><td>26.9</td><td>29.9</td><td>12.3</td></tr>
             <tr data-step="50"><td></td><td>OpenAI o3</td><td>50</td><td>23.8</td><td>32.3</td><td>12.0</td></tr>
+            <tr data-step="15"><td></td><td>Qwen3-VL</td><td>50</td><td>39.1</td><td>29.5</td><td>21.1</td></tr>
             <tr data-step="50"><td></td><td>Qwen2.5-VL</td><td>50</td><td>13.6</td><td>38.4</td><td>7.8</td></tr>
-            <tr data-step="50"><td></td><td>Qwen3-VL</td><td>50</td><td>33.7</td><td>25.1</td><td>21.1</td></tr>
         </tbody>
     </table>
     <p class="note">Click headers to sort, use buttons to filter results.</p>
 </section>
-
 <script>
 function updateRanks() {
     const visibleRows = Array.from(document.querySelectorAll("#leaderboard tbody tr"))
@@ -235,7 +248,6 @@ function updateRanks() {
         else row.cells[0].innerHTML = idx + 1;
     });
 }
-
 function filterSteps(step) {
     const rows = document.querySelectorAll("#leaderboard tbody tr");
     rows.forEach(r => {
@@ -254,14 +266,11 @@ function filterSteps(step) {
         sortTable(3); // 每次切换后按 Accuracy 排序
     }, 350);
 }
-
 function sortTable(colIndex) {
     const table = document.getElementById("leaderboard");
     const tbody = table.tBodies[0];
     const sortType = table.tHead.rows[0].cells[colIndex].dataset.sort;
-
     let rows = Array.from(tbody.querySelectorAll("tr")).filter(r => r.style.display !== "none");
-
     rows.sort((a, b) => {
         let A = a.cells[colIndex].innerText;
         let B = b.cells[colIndex].innerText;
@@ -271,11 +280,9 @@ function sortTable(colIndex) {
             return A.localeCompare(B);
         }
     });
-
     rows.forEach(r => tbody.appendChild(r));
     updateRanks();
 }
-
 // 按钮事件
 document.querySelectorAll(".filter-buttons button").forEach(btn => {
     btn.addEventListener("click", function(){
@@ -284,17 +291,14 @@ document.querySelectorAll(".filter-buttons button").forEach(btn => {
         filterSteps(this.getAttribute("data-filter"));
     });
 });
-
 // 表头点击事件
 document.querySelectorAll("#leaderboard thead th").forEach((th, i) => {
     th.addEventListener("click", () => sortTable(i));
 });
-
 // 页面初始化：默认按 Accuracy 排序
 window.onload = () => {
     sortTable(3); // Accuracy在第4列（索引3）
 };
 </script>
-
 </body>
 </html>
