--- a/index.html
+++ b/index.html
@@ -175,16 +175,16 @@
 <header>
     <h1>OSWorld-MCP Benchmark Leaderboard</h1>
     <h2>OSWorld-MCP: Benchmarking MCP Tool Invocation in Computer-Use Agents</h2>
-    <p><strong>Authors:</strong> Hongrui Jia², Jitong Liao¹, Xi Zhang¹, Haiyang Xu¹, Tianbao Xie¹, Chaoya Jiang², Ming Yan¹, Si Liu³, Wei Ye², Fei Huang¹</p>
-    <p><strong>Affiliations:</strong> ¹ Tongyi Lab, Alibaba Group · ² Peking University · ³ Beijing Zhongguancun Academy</p>
+    <p><strong>Authors:</strong> Hongrui Jia<sup>2,†</sup>, Jitong Liao<sup>1,†</sup>, Xi Zhang<sup>1,†</sup>, Haiyang Xu1<sup>1,*</sup>, Tianbao Xie<sup>1</sup>, Chaoya Jiang<sup>2</sup>, Ming Yan<sup>1,*</sup>, Si Liu<sup>3</sup>, Wei Ye<sup>2</sup>, Fei Huang<sup>1</sup></p>
+    <p><strong>Affiliations:</strong> <sup>1</sup> Tongyi Lab, Alibaba Group · <sup>2</sup> Peking University · <sup>3</sup> Beijing Zhongguancun Academy</p>
     <!-- <div class="icon-links">
-        <a href="https://arxiv.org/abs/2501.12345" target="_blank" title=" TODO Read the Paper"><i class="fas fa-file-alt"></i></a>
-        <a href="https://github.com/yourusername/osworld-mcp" target="_blank" title="View on GitHub"><i class="fab fa-github"></i></a>
+        <a href="" target="_blank" title=" Read the Paper"><i class="fas fa-file-alt"></i></a>
+        <a href="https://github.com/X-PLUG/OSWorld-MCP" target="_blank" title="View on GitHub"><i class="fab fa-github"></i></a>
     </div> -->
 </header>
 <div class="updates">
-    📢 <strong>2025-10-23:</strong> We released our paper and code!    TODO  
-    <i class="fas fa-file-alt"></i> <a href="https://arxiv.org/abs/2501.12345" target="_blank">Read the Paper</a> | <i class="fab fa-github"></i> <a href="https://os-world-mcp.github.io" target="_blank">View on GitHub</a>
+    📢 <strong>2025-10-23:</strong> We released our paper and code!   
+    <i class="fas fa-file-alt"></i> <a href="" target="_blank">Read the Paper</a> | <i class="fab fa-github"></i> <a href="https://github.com/X-PLUG/OSWorld-MCP" target="_blank">View on GitHub</a>
 </div>
 <section>
     <h2>Abstract</h2>
