--- a/index.html
+++ b/index.html
@@ -183,8 +183,8 @@
     </div> -->
 </header>
 <div class="updates">
-    📢 <strong>2025-10-23:</strong> We released our paper and code!   
-    <i class="fas fa-file-alt"></i> <a href="" target="_blank">Read the Paper</a> | <i class="fab fa-github"></i> <a href="https://github.com/X-PLUG/OSWorld-MCP" target="_blank">View on GitHub</a>
+    📢 <strong>2025-10-28:</strong> We released our paper and code!   
+    <i class="fas fa-file-alt"></i> <a href="https://arxiv.org/abs/2510.24563" target="_blank">Read the Paper</a> | <i class="fab fa-github"></i> <a href="https://github.com/X-PLUG/OSWorld-MCP" target="_blank">View on GitHub</a>
 </div>
 <section>
     <h2>Abstract</h2>
